[package]
name = "miniftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log =  "0.4.14"
bytes = "1.1.0"
yaml-rust = "0.4.5"
nix = "0.23.0"
num_cpus = "1.13.1"
env_logger = "0.9"
chrono = "0.4.19"

[profile.dev]
opt-level = 0
